[gd_scene load_steps=3 format=3 uid="uid://cliupv70pcueq"]

[ext_resource type="Script" uid="uid://irtv8rsye4h2" path="res://tracks/game.gd" id="1_utesd"]
[ext_resource type="PackedScene" uid="uid://domtrhyhp37d3" path="res://scenes/player_viewport/PlayerViewport.tscn" id="2_vdqrv"]

[node name="Game" type="Node"]
script = ExtResource("1_utesd")

[node name="ViewportHolder" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerViewport" parent="ViewportHolder" instance=ExtResource("2_vdqrv")]
layout_mode = 2

[node name="SubViewport" parent="ViewportHolder/PlayerViewport" index="0"]
size = Vector2i(1152, 648)

[node name="TrackHolder" type="Node" parent="ViewportHolder/PlayerViewport"]

[editable path="ViewportHolder/PlayerViewport"]
